[gd_scene load_steps=9 format=3 uid="uid://cxbblq6w0kbrc"]

[ext_resource type="Texture2D" uid="uid://b0w5vapmws5fj" path="res://assets/sprites/spikey-poly/spikey-poly.png" id="1_jhjkm"]
[ext_resource type="Script" uid="uid://b5k5kdgubf6y1" path="res://assets/scripts/objects/spikey_poly.gd" id="1_p0hcf"]
[ext_resource type="Script" uid="uid://cphusaq70x4jg" path="res://assets/scripts/obstacles.gd" id="2_p0hcf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k8hhq"]
atlas = ExtResource("1_jhjkm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvfwm"]
atlas = ExtResource("1_jhjkm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6nvp"]
atlas = ExtResource("1_jhjkm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nx305"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8hhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvfwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6nvp")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jhjkm"]
size = Vector2(26, 26)

[node name="SpikeyPoly" type="Node2D"]
script = ExtResource("1_p0hcf")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_nx305")
autoplay = "default"
frame_progress = 0.3275775

[node name="HitArea" type="Area2D" parent="."]
position = Vector2(0, -16)
collision_layer = 8
collision_mask = 0
script = ExtResource("2_p0hcf")
launch_mode = 1
direction_offset_angle = -90.0

[node name="Collision" type="CollisionShape2D" parent="HitArea"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_jhjkm")
debug_color = Color(0.9698636, 0, 0.46169943, 0.41960785)

[node name="RayFront" type="RayCast2D" parent="."]
position = Vector2(-13, -4)
target_position = Vector2(0, 7)

[node name="RayBack" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(0, 7)
